--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -2,13 +2,14 @@
 
     <div class="container d-flex flex-column flex-lg-row justify-content-between">
 
-        <div>
-            <img class="mt-4 logo-img" src="../../assets/HRIT logo 5.png" alt="logo">
-        </div>
+        <div><img class="mt-4 logo-img" src="../../assets/HRIT logo 5.png" alt="logo"></div>
 
         <div class="card">
+
             <h3>Forgot Password</h3>
+
             <form [formGroup]="FgpwPage" (ngSubmit)="SENDOTP()">
+
                 <div class="input-container">
                     <i class="fa-solid fa-user input-icon"></i>
                     <input type="text" placeholder="Enter User Name" class="form-control" formControlName="username">
@@ -24,6 +25,7 @@
                     <div class="mt-4 align-back"><a routerLink="/">Back to Login</a></div>
                     <div *ngIf="loading" class="spinner" ></div>
                 </div>
+                
             </form>
 
         </div>
