--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
-<div>
+<!-- <div>
+
     <div class="mt-5">
         <div class="profile-card">
-            <!-- <jw-modal id="custom-modal-8"> -->
                 <div  style="margin-left:40%;"><img src="../../assets/images/userDP.jpg" alt="HR Dp" class="dp-circle"></div>
 
                 <div class="user-info" style="margin-left: 45%;">
@@ -17,7 +17,7 @@
                     <button class="btn btn-primary" routerLink (click)="Signout()" role="button"><span class="text">Logout</span></button>
                 </div>
                 <br>
-            <!-- </jw-modal> -->
         </div>
     </div>
-</div>
+
+</div> -->
