--- a/src/app/view-users/view-users.component.html
+++ b/src/app/view-users/view-users.component.html
@@ -47,7 +47,7 @@
         <p class="align-note">Note: If you want to update the user information than click on respective user ID.</p>
     </div>
     <div class="text-center" style="margin-bottom: 5%;">
-        <a routerLink="/register" style="font-size: 20px;">Back</a> 
+        <button routerLink="/register" class="btn btn-secondary" role="button" style="background-color: gray;"><span class="text">Back</span></button> 
     </div>
  
 </div>
