--- a/src/app/_modal/modal.component.less
+++ b/src/app/_modal/modal.component.less
@@ -1,10 +1,7 @@
-/* MODAL STYLES
--------------------------------*/
+/* -------------------------- MODAL STYLES -------------------------------*/
 jw-modal {
     /* modals are hidden by default */
     display: none;
-    
-
     .jw-modal {
         /* modal container fixed across whole screen */
         position: fixed;
@@ -17,29 +14,23 @@ jw-modal {
         z-index: 1000;
         /* enables scrolling for tall modals */
         overflow-y: auto;
-
-            /* Hide scrollbar in WebKit browsers (Chrome, Safari) */
+        /* Hide scrollbar in WebKit browsers (Chrome, Safari) */
         ::-webkit-scrollbar {
-        width: 0    ;
-        height: 0;
+            width: 0    ;
+            height: 0;
         }
-
-         /* Hide scrollbar in Firefox */
+        /* Hide scrollbar in Firefox */
         scrollbar-width: none; 
-
-    /* Hide scrollbar in Edge and Internet Explorer */
-            -ms-overflow-style: none; 
-            .jw-modal-body {
+        /* Hide scrollbar in Edge and Internet Explorer */
+        -ms-overflow-style: none; 
+        .jw-modal-body {
             padding: 25px;
-            // background: #fff;
             background-color: #F5F5F5;
             /* margin exposes part of the modal background */
             margin: 40px;
             border-radius: 25px;
-
         }
     }
-
     .jw-modal-background {
         /* modal background fixed across whole screen */
         position: fixed;
@@ -47,11 +38,9 @@ jw-modal {
         right: 0;
         bottom: 0;
         left: 0;
-
         /* semi-transparent black  */
         background-color: #000;
         opacity: 0.75;
-        
         /* z-index must be below .jw-modal and above everything else  */
         z-index: 900;
     }
@@ -60,5 +49,4 @@ jw-modal {
 body.jw-modal-open {
     /* body overflow is hidden to hide main scrollbar when modal window is open */
     overflow: hidden;
-    
 }
