--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -1,17 +1,12 @@
 <div class="main-container">
  
- 
-    <div>
-        <h5 class="heading text-center">Update form for Admin/HR persons</h5>
-    </div>
+    <div><h5 class="heading text-center">Update form for Admin/HR persons</h5></div>
    
- 
     <div class="card">
-       
+
         <form  [formGroup]="updateForm" (ngSubmit)="onSubmit()">
- 
+
             <div class="grid-container">
- 
                 <div class="label-container">
                     <label for="role">Role :</label>
                     <select name="role" id="role" class="form-control" formControlName="USERTYPE">
@@ -19,21 +14,17 @@
                         <option value="Admin">Admin</option>
                         <option value="HR">HR</option>
                     </select>
- 
                     <div *ngIf="updateForm.get('USERTYPE')?.touched && updateForm.get('USERTYPE')?.hasError('required')" class="text-danger ">
                         *Role is required
                     </div>
- 
                 </div>
  
                 <div class="label-container">
                     <label for="fn">First Name :</label>
                     <input type="text" id="fn" class="form-control" formControlName="FIRSTNAME">
- 
-                    <div *ngIf="updateForm.get('FIRSTNAME')?.touched && updateForm.get('FIRSTNAME')?.hasError('required')"
-                    class="text-danger ">*First Name is required
+                    <div *ngIf="updateForm.get('FIRSTNAME')?.touched && updateForm.get('FIRSTNAME')?.hasError('required')" class="text-danger ">
+                        *First Name is required
                     </div>
- 
                 </div>
  
                 <div class="label-container">
@@ -44,51 +35,41 @@
                 <div class="label-container">
                     <label for="ln">Last Name :</label>
                     <input type="text" id="ln" class="form-control" formControlName="LASTNAME">
- 
-                    <div *ngIf="updateForm.get('LASTNAME')?.touched && updateForm.get('LASTNAME')?.hasError('required')"
-                    class="text-danger ">*Last Name is required
+                    <div *ngIf="updateForm.get('LASTNAME')?.touched && updateForm.get('LASTNAME')?.hasError('required')" class="text-danger ">
+                        *Last Name is required
                     </div>
- 
                 </div>
  
                 <div class="label-container">
                     <label for="mbl">Contact :</label>
                     <input type="tel" id="mbl" class="form-control" formControlName="MOBILENUMBER">
- 
-                    <div *ngIf="updateForm.get('MOBILENUMBER')?.touched && updateForm.get('MOBILENUMBER')?.hasError('required')"
-                    class="text-danger ">*Mobile Number is required
+                    <div *ngIf="updateForm.get('MOBILENUMBER')?.touched && updateForm.get('MOBILENUMBER')?.hasError('required')" class="text-danger ">
+                        *Mobile Number is required
                     </div>
- 
                 </div>
  
                 <div class="label-container">
                     <label for="email">Email :</label>
                     <input type="text" id="email" class="form-control" formControlName="EMAIL">
- 
-                    <div *ngIf="updateForm.get('EMAIL')?.touched && updateForm.get('EMAIL')?.hasError('required')"
-                    class="text-danger ">*Email is required
+                    <div *ngIf="updateForm.get('EMAIL')?.touched && updateForm.get('EMAIL')?.hasError('required')" class="text-danger ">
+                        *Email is required
                     </div>
- 
                 </div>
  
                 <div class="label-container">
                     <label for="uid">User ID :</label>
                     <input type="text" id="uid" class="form-control" formControlName="USERID">
- 
-                    <div *ngIf="updateForm.get('USERID')?.touched && updateForm.get('USERID')?.hasError('required')"
-                    class="text-danger ">*User Id is required
+                    <div *ngIf="updateForm.get('USERID')?.touched && updateForm.get('USERID')?.hasError('required')" class="text-danger ">
+                        *User Id is required
                     </div>
- 
                 </div>
  
                 <div class="label-container">
                     <label for="uname">User Name :</label>
                     <input type="text" id="uname" class="form-control" formControlName="USERNAME">
- 
-                    <div *ngIf="updateForm.get('USERNAME')?.touched && updateForm.get('USERNAME')?.hasError('required')"
-                    class="text-danger ">*User Name is required
+                    <div *ngIf="updateForm.get('USERNAME')?.touched && updateForm.get('USERNAME')?.hasError('required')" class="text-danger ">
+                        *User Name is required
                     </div>
- 
                 </div>
  
                 <div class="label-container">
@@ -100,25 +81,23 @@
                     </select>
                 </div>
  
- 
             </div>
  
             <div class="button-container">
-                <button class="btn btn-primary" type="submit"  role="button"  style="width: 80px;" ><span class="text">Update</span></button>&nbsp;&nbsp;
- 
+                <button class="btn btn-primary" type="submit"  role="button"  style="width: 80px;" ><span class="text">Update</span></button>
+                &nbsp;&nbsp;
                 <button class="btn btn-primary" role="button" type="button" routerLink="/viewUsers" style="background-color: grey;"><span class="text">Cancel</span></button>
             </div>
+
             <div *ngIf="loading" class="spinner mt-4" style="margin-left: 48%;"></div>
- 
  
         </form>
  
     </div>
  
     <div class="text-center" style="margin-bottom: 5%;margin-top: 20px;">
-        <a routerLink="/register" style="font-size: 20px;">Back</a> 
+        <button routerLink="/register" class="btn btn-primary" role="button" style="margin-left: 0;background-color: gray;"><span class="text">Back</span></button> 
     </div>
-
  
 </div>
  
