--- a/src/app/view-employees/edit-details/edit-details.component.css
+++ b/src/app/view-employees/edit-details/edit-details.component.css
@@ -1,7 +1,6 @@
-
 /* Style for form container */
 
-  .animated {
+.animated {
   width: 210px;
   padding: 10px;
   border-radius: 30px;
@@ -19,50 +18,46 @@
   cursor: pointer;
   transition: color 0.5s ease, border-color 0.5s ease;
 }
- 
+
 .animated::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: -100%;
   width: 100%;
   height: 100%;
-  background-color: #FFFF;
+  background-color: #ffff;
   color: #000;
-  transition: left 0.3s cubic-bezier(.165, 0.84, 0.44, 1);
+  transition: left 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
   z-index: 0;
 }
- 
+
 .animated:hover::before {
   left: 0;
 }
- 
+
 .animated span {
   position: relative;
   z-index: 1;
   transition: black 0.5s ease;
 }
- 
+
 .animated:hover {
   color: #000;
-} */
- 
-
-.employee-esd-end-search{
+}
+*/ .employee-esd-end-search {
   display: flex;
   flex-direction: row;
- 
+
   margin-left: 5%;
   margin-bottom: 3%;
-
-
 }
 
 /* .input{
   width: 40%;
 } */
 
-.esdButtons{
+.esdButtons {
   height: 45px;
   margin-top: 40px;
   width: 100px;
@@ -72,10 +67,9 @@
   width: 100%;
   margin: 0 auto;
 }
- 
+
 /* Style for form headings */
 
- 
 /* Style for form rows */
 .form-row {
   display: flex;
@@ -83,66 +77,63 @@
   justify-content: space-between;
   /* size: 20px; */
 }
- 
+
 /* Style for form groups */
 .form-group {
   flex: 0 0 calc(33.33% - 10px); /* Adjust width for three columns with spacing */
 }
- 
+
 /* Style for form labels */
 label {
   display: block;
   font-weight: bold;
   margin-bottom: 5px;
 }
- 
+
 /* Style for form input fields */
 input[type="text"],
 input[type="email"],
 input[type="date"],
-  select {
+select {
   width: 100%;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
 }
- 
+
 /* Style for submit buttons */
 /* .btn1,
 .btn2 {
   margin-top: 20px;
 } */
- 
- 
- 
+
 /* Style for form container */
 .container-box {
   width: 100%;
   height: 10%;
- 
+
   /* border: 1px solid black; */
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   margin: 0 auto;
   border-radius: 25px;
- 
 }
-.edit-Container{
+.edit-Container {
   display: flex;
   flex-direction: row;
 
   margin-left: 30%;
 }
- 
-.sub-button{
+
+.sub-button {
   width: 10%;
-  height: 10%; 
+  height: 10%;
 }
- 
-.input{
+
+.input {
   margin-right: 10%;
 }
- 
+
 /* Style for form rows */
 .form-row {
   display: flex;
@@ -151,29 +142,27 @@ input[type="date"],
   justify-content: space-between;
   top: 80%;
 }
- 
+
 /* Style for form groups */
 .form-group {
   flex: 0 0 calc(33.33% - 10px); /* Adjust width for three columns with spacing */
 }
- 
+
 /* Style for form labels */
 label {
   display: block;
   font-weight: bold;
   margin-bottom: 5px;
- 
 }
- 
+
 input[disabled],
 select[disabled],
 textarea[disabled],
 button[disabled] {
-cursor: not-allowed;
-background-color: rgb(239, 239, 239);
+  cursor: not-allowed;
+  background-color: rgb(239, 239, 239);
 }
- 
- 
+
 /* Style for form input fields */
 input[type="text"],
 input[type="email"],
@@ -186,28 +175,23 @@ select {
   box-sizing: border-box;
   /* background-color: #dceaf7;
   border: 0px solid black; */
-  font-weight:500;
- 
- 
+  font-weight: 500;
 }
- 
- 
- 
+
 /* Style for submit buttons */
-.btn1
-{
+.btn1 {
   margin-top: 50px;
   /* margin-bottom: 50px; */
 }
-.btn2{
-  margin-left:  20px;
+.btn2 {
+  margin-left: 20px;
   /* margin-bottom: 50px; */
   /* margin-top: 50px; */
 }
- 
-.main{
+
+.main {
   width: 90%;
-  background-color:white;
+  background-color: white;
   padding: 10px;
 }
 /* h5{
@@ -215,56 +199,50 @@ font-size: xx-large;
 font-family: bold;
 padding: 2%;
 } */
- 
- 
- 
- 
-.plus-icon{
-position: absolute;
-font-size: large;
-right: 8%;
- 
+
+.plus-icon {
+  position: absolute;
+  font-size: large;
+  right: 8%;
 }
- 
+
 /* .edit-icon{ */
 /* font-size:medium; */
- 
+
 /* } */
-select{
-appearance: none;
-background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iNiIgdmlld0JveD0iMCAwIDEyIDYiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0iTTAgMmgxMkw2IDZMNCA0eiIgZmlsbD0iIzAwMDAwMCIvPjwvc3ZnPg==');
-background-repeat: no-repeat;
-background-position: right 10px center;
-background-size: 15px;
-padding-right: 30px;
+select {
+  appearance: none;
+  background-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iNiIgdmlld0JveD0iMCAwIDEyIDYiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0iTTAgMmgxMkw2IDZMNCA0eiIgZmlsbD0iIzAwMDAwMCIvPjwvc3ZnPg==");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 15px;
+  padding-right: 30px;
 }
- 
- 
+
 .profile-container {
-display: flex;
-align-items: center;
-background-color: rgb(241, 234, 234);
-width: 70%;
-height: 13vh;
-border: 1px solid black;
-border-radius: 10px;
-margin: 7% 0 1% 15%;
+  display: flex;
+  align-items: center;
+  background-color: rgb(241, 234, 234);
+  width: 70%;
+  height: 13vh;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 7% 0 1% 15%;
 }
- 
+
 .profile-img {
-width: 8%;
-height: auto;
-margin-left: 3%;
-border-radius: 50%;
+  width: 8%;
+  height: auto;
+  margin-left: 3%;
+  border-radius: 50%;
 }
- 
+
 .profile-info {
-display: flex;
-flex-direction: column;
-margin:2% 0 0 2%
+  display: flex;
+  flex-direction: column;
+  margin: 2% 0 0 2%;
 }
- 
- 
+
 .loading-spinner-container {
   display: flex;
   justify-content: center;
@@ -277,7 +255,7 @@ margin:2% 0 0 2%
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 9999;
 }
- 
+
 .loading-spinner {
   border: 8px solid #f3f3f3;
   border-top: 8px solid #3498db;
@@ -286,25 +264,27 @@ margin:2% 0 0 2%
   height: 100px;
   animation: spin 2s linear infinite;
 }
- 
+
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
- 
- 
-.btn-close{
+.btn-close {
   margin-left: 96%;
   font-weight: bold;
 }
 
-.btn-close:hover{
+.btn-close:hover {
   background-color: red;
 }
 
-.scrolling{
-  overflow-y:hidden;
+.scrolling {
+  overflow-y: hidden;
 }
 
 /* .disabled-select {
@@ -312,3 +292,64 @@ margin:2% 0 0 2%
   cursor: not-allowed;
   pointer-events: none; 
 } */
+
+.employee-list-display {
+  width: 100%; 
+  height: auto;
+}
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 30px;
+  width: 100%;
+  margin-left: 5%;
+  margin-top: 30px;
+}
+
+.card {
+  width: 100%;
+  max-width: 300px;
+  background-color: #cae0f4;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.card-title {
+  font-size: 18px;
+  color:rgb(133, 21, 21);
+  margin-bottom: 10px;
+}
+
+.card-text {
+  font-size: 16px;
+  font-weight: bold;
+  /* color: red; */
+  margin-bottom: 10px;
+}
+
+.card-actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.fa-solid:hover{
+  color:rgb(133, 21, 21)
+}
+
+.paragraph{
+  color: red;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 2%;
+}
