--- a/src/app/view-employees/employee-card-display/employee-card-display.component.html
+++ b/src/app/view-employees/employee-card-display/employee-card-display.component.html
@@ -9,35 +9,25 @@
           <div class="employee-details">
 
             <div class="top-right-circles">
-
               <div class="circle1">
-
                 <button class="material-icon-button" (click)="handleEditClick(employee)">
-                  
-                  <span class="material-symbols-outlined" style="font-size: 25px; position: absolute; top: 2.8px; left: 8px;">
-                    edit
-                  </span>
-
+                  <span class="material-symbols-outlined" style="font-size: 25px; position: absolute; top: 2.8px; left: 8px;"> edit</span>
                 </button>
-
               </div>
-             
             </div>
- 
-            <div class="employee-details1">
 
+            <div class="employee-details1">
               <div class="img-div">
                 <img src="../../../assets/images/userDP.jpg" alt="userimage">
               </div>
-              
               <p style="font-weight: bold;font-size: 1.2em;">{{ employees.EMPLOYEE_DETAILS.EMP_NO.startsWith('C') ?'Candidate No':'Employee No'}}
                 <span style="color: red;">{{ employees.EMPLOYEE_DETAILS.EMP_NO }}</span>
                 <br>
                 Name: 
                 <span style="color: red;">{{ employees.EMPLOYEE_DETAILS.FIRST_NAME }} {{ employees.EMPLOYEE_DETAILS.LAST_NAME }}</span>
               </p>
-
             </div>
+
             <div class="employee-details2">
               <p>
                 <span class="material-symbols-outlined">calendar_month</span>
@@ -51,7 +41,6 @@
               </p>
             </div>
             
-
           </div>
 
         </div>
